tests/snapshots/examples_fixtures/type_system__failing__30_strict_public_unannotated_effectful.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/30_strict_public_unannotated_effectful.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `log` requires effect `IO` in this function signature.

  examples/type_system/failing/30_strict_public_unannotated_effectful.flx:6:5
  |
6 |     log("strict mode")
  |     ^^^
  |     --- effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.
== stdout ==
<not executed>
